# 2023_aoc

./: CMakeLists.txt  README.md
1/: CMakeLists.txt
1/src/: first.cpp  second.cpp
2/: CMakeLists.txt
2/src/: first.cpp  second.cpp
3/: CMakeLists.txt  test.2
3/include/: common.hpp
3/src/: common.cpp  first.cpp  second.cpp  wrong_second.cpp
4/: CMakeLists.txt
4/src/: main.cpp
5/: CMakeLists.txt
5/src/: main.cpp
6/: CMakeLists.txt
6/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: util.hpp
lib/src/: util.cpp
